[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "fishbones"
description = "Library for implementing decompiled code."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Sh4w", email = "sh4w0911@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.6"
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "fishbones.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["fishbones*"]

[tool.mypy]
files = ["src/fishbones"]
python_version = "3.6"
show_error_codes = true
allow_redefinition = true
no_implicit_optional = true
local_partial_types = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
allow_empty_bodies = true
