[metadata]
name = gravitum
version = attr: gravitum.__version__
author = Sh4w
author_email = sh4w0911@gmail.com
description = Library for implementing decompiled code.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy
python_requires = >=3

[options.packages.find]
where = src

[flake8]
select = B, E, F, W, B9, ISC
per-file-ignores =
    src/gravitum/__init__.py: F401
exclude =
    venv
max-line-length = 80

[yapf]
based_on_style = google
spaces_before_comment = 4
split_before_logical_operator = true
