[metadata]
name = gravitum
version = attr: gravitum.__version__
author = Sh4w
author_email = sh4w0911@gmail.com
description = Library for implementing decompiled code.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy
python_requires = >=3.6

[options.packages.find]
where = src

[flake8]
select = B, E, F, W, B9, ISC
per-file-ignores =
    src/gravitum/__init__.py: F401, F403
exclude =
    venv
max-line-length = 80

[yapf]
based_on_style = google
spaces_before_comment = 4
split_before_logical_operator = true

[mypy]
files = src/gravitum
python_version = 3.6
show_error_codes = True
allow_redefinition = True
# disallow_subclassing_any = True
# disallow_untyped_calls = True
# disallow_untyped_defs = True
# disallow_incomplete_defs = True
no_implicit_optional = True
local_partial_types = True
# no_implicit_reexport = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True
# warn_return_any = True
# warn_unreachable = True

[mypy-numpy.*]
ignore_missing_imports = True
